--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 .container {
-    margin-top: 20px;
+    margin-top: 10px;
 }
 
 /* Carousel Styles */
@@ -26,11 +26,11 @@
 }
 
 .carousel-control.left span {
-  padding: 15px;
+  padding: 0;
 }
 
 .carousel-control.right span {
-  padding: 15px;
+  padding: 0;
 }
 
 .carousel-control .glyphicon-chevron-left,
@@ -39,7 +39,7 @@
 .carousel-control .icon-next {
   position: absolute;
   top: 45%;
-  z-index: 5;
+  z-index: 10;
   display: inline-block;
 }
 
@@ -88,6 +88,10 @@
   padding: 15px;
 }
 
+.header-text span{
+  opacity: 0.5;
+}
+
 .btn-min-block {
     min-width: 170px;
     line-height: 26px;
@@ -105,3 +109,132 @@
     background-color: #fff;
     border-color: #fff;
 }
+.caption{
+  position: absolute;
+    bottom: 0px;
+    width: 100%;
+    padding: 0px 0px 45px 0px !important;
+
+}
+.thumbnail{
+  position: relative;
+  padding-top: 50px;
+
+}
+br:before {
+    display: block;
+    margin-top: 10px;
+    content: "";
+}
+.well{
+  text-align: center;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+.btn-primary{
+  background-color: #ddd;
+}
+
+.hiw-container {
+    background-color: #3D4350;
+    display: inline-block;
+    padding: 30px 0px 40px;
+    text-align: center;
+    width: 100%;
+   }
+
+.hiw-container .steps-list .steps-card h3 {
+    font-size: 21px;
+    margin-bottom: 3px;
+    font-family: "Roboto",sans-serif;
+}
+.hiw-container h3 {
+    color: #FFF;
+    font-size: 24px;
+    font-family: "Roboto",sans-serif;
+    font-weight: 700;
+    margin: 0px;
+    padding-bottom: 0px;
+}
+.hiw-container .steps-list .steps-card p {
+    font-size: 14px;
+    color: #BCBBBB;
+    font-family: "Roboto",sans-serif;
+}
+p {
+    margin: 0px 0px 10px;
+}
+#hiw-container > p{
+    font-size: 14px;
+    color: #BCBBBB;
+    font-family: "Roboto",sans-serif;
+}
+
+.hiw-container .steps-list .steps-card img {
+    width: 100%;
+}
+img {
+    vertical-align: middle;
+}
+img {
+    border: 0px none;
+}
+img {
+    vertical-align: middle;
+}
+img {
+    border: 0px none;
+}
+* {
+    box-sizing: border-box;
+}
+* {
+    box-sizing: border-box;
+}
+.home-wrapper-dsktp .hiw-container .steps-list .steps-card {
+    text-align: left;
+}
+
+.social {
+    margin: 0;
+    padding: 0;
+}
+
+.social ul {
+    margin: 0;
+    padding: 5px;
+}
+
+.social ul li {
+    margin: 5px;
+    list-style: none outside none;
+    display: inline-block;
+}
+
+.social i {
+    width: 40px;
+    height: 40px;
+    color: #FFF;
+    background-color: #909AA0;
+    font-size: 22px;
+    text-align:center;
+    padding-top: 12px;
+    border-radius: 50%;
+    -moz-border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -o-border-radius: 50%;
+    transition: all ease 0.3s;
+    -moz-transition: all ease 0.3s;
+    -webkit-transition: all ease 0.3s;
+    -o-transition: all ease 0.3s;
+    -ms-transition: all ease 0.3s;
+}
+
+.social i:hover {
+    color: #FFF;
+    text-decoration: none;
+    transition: all ease 0.3s;
+    -moz-transition: all ease 0.3s;
+    -webkit-transition: all ease 0.3s;
+    -o-transition: all ease 0.3s;
+    -ms-transition: all ease 0.3s;
