Agregado de sugerencias Luis 19/11/2015

--- a/css/style.css
+++ b/css/style.css
@@ -273,3 +273,13 @@ img {
   color: #eee;
 
 }
+
+.copyright ul{
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.copyright ul li{
+  display: inline;
+}
