--- a/css/style.css
+++ b/css/style.css
@@ -283,3 +283,18 @@ img {
 .copyright ul li{
   display: inline;
 }
+
+.gdo-ads{
+  background: #eee;
+}
+
+.portfolio-item {
+    margin-bottom: 25px;
+}
+
+footer {
+    margin: 50px 0;
+}
+.page-header{
+  text-align: center;
+}
